1. fix misprinting pom.xml 2. add in junit-platform.properties to tests 3. refactor InterpreterObj to use Optional for startRule and improve listener handling 4. implement unit test for verifying startRule